# Crossplatform-pack

./: README.md  pyproject.toml  setup.py
.github/workflows/: build.yml
