[tool.poetry]
name = "Crossplatform-pack"
version = "0.1.0"
description = "Crossplatform-pack"
authors = ["HsiangNianian <admin@jyunko.cn>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"

[tool.poetry]
# ...
dependencies = {
    # ...
    "crossplatform-pack" = "^0.4.0"
}
